Added planet names

--- a/html/felucia.html
+++ b/html/felucia.html
@@ -116,6 +116,7 @@
 				<span v-for="item in selectedMission.rewards">&nbsp;&nbsp;{{item}}&nbsp;&nbsp;&nbsp;</span>
 			</div>
             <div class="rewards mb-2" v-if="selectedMission.stars">
+                                <h2>Felucia</h2>
 				<p class="h4">Star Requirements</p>
                 <ul>
 				    <li class="text-justify" v-for="item in selectedMission.stars">{{item}}</li>
