--- a/html/mustafar.html
+++ b/html/mustafar.html
@@ -119,6 +119,7 @@
 			</div>
             
             <div class="rewards mb-3" v-if="selectedMission.stars">
+                                <h2>Mustafar</h2>
 				<p class="h4">Star Requirements</p>
                 <ul>
 				    <li class="text-justify" v-for="item in selectedMission.stars">{{item}}</li>
