--- a/html/corellia.html
+++ b/html/corellia.html
@@ -118,6 +118,7 @@
 			</div>
             
             <div class="rewards mb-3" v-if="selectedMission.stars">
+                                <h2>Corellia</h2>
 				<p class="h4">Star Requirements</p>
                 <ul>
 				    <li class="text-justify" v-for="item in selectedMission.stars">{{item}}</li>
