--- a/html/haven.html
+++ b/html/haven.html
@@ -117,6 +117,7 @@
 				<span v-for="item in selectedMission.rewards">&nbsp;&nbsp;{{item}}&nbsp;&nbsp;&nbsp;</span>
 			</div>
             <div class="rewards mb-3" v-if="selectedMission.stars">
+                                <h2>Haven</h2>
 				<p class="h4">Star Requirements</p>
                 <ul>
 				    <li class="text-justify" v-for="item in selectedMission.stars">{{item}}</li>
