--- a/html/felucia.html
+++ b/html/felucia.html
@@ -125,7 +125,7 @@
 		</div>
 	</div>
 </template>
-<div class="top-left"><a href="main.html" style="color:#FFFFFF;"> <i class="fa fa-home fa-fw"></i>Full Map </a><br>
+<div class="top-left"><a href="main.html" style="vertical-align: text-bottom; margin-left: 10px;"><img src="../media/map-icon.svg" style="width: 2em; height: 0.9em;" /> <a href="main.html" style="color:#FFFFFF;">Full Map</a> / Felucia<br>
 <script src="../js/vue.min.js"></script>
 <script src="../js/felucia.js"></script>
 <!-- Google tag (gtag.js) -->
