--- a/html/main.html
+++ b/html/main.html
@@ -204,8 +204,7 @@
 		</div>
 	</div>
 </template>
-<div class="top-left"><a href="../index.html" style="color:#FFFFFF;"> <i class="fa fa-home fa-fw"></i>Home </a><br>
-<div class="top-left"><a href="../index.html" style="color:#FFFFFF;"> <i class="fa fa-home fa-fw"></i>Home </a><br>
+<div class="top-left"><a href="../index.html" style="vertical-align: text-bottom; margin: 0 10px 0 30px;"><img src="../media/get3.svg" style="width: 0.75em; height 1em;"/></a> <a href="../index.html" style="color:#FFFFFF;">Title Screen </a><br>
 <script src="../js/vue.min.js"></script>
 <script src="../js/main.js"></script>
 <!-- Google tag (gtag.js) -->
