--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 </head>
 
 <style>
-body {font-family: "Oswald", Open Sans; font-weight: 700; }
-h1 {font-family: "Oswald", Open Sans; font-weight: 900; font-size: 40px;}
+  @font-face {
+  font-family: Star Jedi ;
+  src: url(media/fonts/Starjedi.ttf);
+
+  font-family: Soloist ;
+  src: url(media/fonts/Soloist-Z6M8.otf); 
+}
+
+body {font-family: "Open Sans" sans-serif; font-weight: 400; }
+h1 {font-family: "Soloist", "Open Sans"; font-weight: 900; font-size: 40px;}
 body, html {height: 100%}
 .bgimg {
   background-image: url('media/map_rote.jpeg');
@@ -22,14 +30,17 @@ body, html {height: 100%}
   background-size: cover;
   opacity: 1.0;
 }
+.soloist {
+  font-family: "Soloist", "Open Sans", san-serif;
+}
 </style>
 <body>
 
 <div class="bgimg w3-display-container w3-text-white w3-text-bold">
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-center ">Interactive ROTE TB</h1>
+    <h1 class="w3-xxxlarge w3-animate-top w3-center ">Rise of the Empire<br>Territory Battle Guide</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-xlarge w3-center"><a href="html/main.html"><img src="media/reva_shard.png" alt="KAM" style="width:42px;height:42px;">Rise of the Empire TB Map</a></p>
+    <p class="w3-xlarge w3-center soloist"><a href="html/main.html"><img src="media/get3.svg" alt="Reva" style="width:30px;height:40px;"></a> <a href="html/main.html">Interactive ROTE TB Map</a></p>
     <p class="w3-large w3-center"> 
     <a href="html/authors.html"> Authors and Credits </a>&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/28uDpDob7tsUHTZ8A"> Squad Suggestion?</a>
     </p>
