--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@ body, html {height: 100%}
 
     
     <!-- Guild Advert. Will add/remove when appropriate -->
-    <!-- <p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 31 Stars ROTE - 1 Permanent Space Available!</a></p> -->
-
+    <p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 33 Stars ROTE - 1 Permanent Space Available!</a></p>
 
 
 </div>
