Initial commit of zeffo without enemies or teams

--- a/html/main.html
+++ b/html/main.html
@@ -123,7 +123,13 @@
 							<tspan x="340" dy="15">Lothal</tspan>	
 							<tspan x="340" dy="15">3*: 524,984,167 </tspan>	
 					</text>
-                    <path class="part" d="M 494 324 L 538 285 L 516 265 L 520 260 C 496 239 472 227 441 217 L 439 225 L 427 222 L 415 268 C 442 275 463 284 483 302 L 478 308 L 494 324 z"					></path>
+                    <!-- Ls3 Bonus -->
+                    <path  fill="blue" class="part" d="M 494 324 L 538 285 L 516 265 L 520 260 C 496 239 472 227 441 217 L 439 225 L 427 222 L 415 268 C 442 275 463 284 483 302 L 478 308 L 494 324 z"					></path>
+                    <text x="340" y="415">
+							<tspan x="340" dy="0">LS Bonus 3</tspan></tspan>	
+							<tspan x="340" dy="15">Zeffo</tspan>	
+							<tspan x="340" dy="15">1*: 287,179,167</tspan>	
+					</text>
                     <!-- Mixed 3 -->
                     <path fill="green" class="part" d="M 415 269 L 427 222 L 438 225 L 441 217 C 391 205 364 205 305 217 L 308 225 L 318 223 L 331 268 C 366 261 387 261 415 269 z"					></path>
 					<text x="340" y="415">
