--- a/index.html
+++ b/index.html
@@ -33,18 +33,14 @@ body, html {height: 100%}
     <p class="w3-large w3-center"> 
     <a href="html/authors.html"> Authors and Credits </a>&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/28uDpDob7tsUHTZ8A"> Squad Suggestion?</a>
     </p>
-    <!---<p class="w3-xlarge w3-center">--->
-    <!---<a href="html/skaarbot.html"> Discord Bot</a>--->
-    <!---</p>--->
     <p class="w3-xlarge w3-center"> 
-    <!--<a href="https://forms.gle/fZkX1NKvnwYWSp2x7"> Squad Suggestion?</a>&nbsp;&nbsp;&nbsp; <a href="html/strats.html"> Guild Deployment Strats (WIP)</a>-->
     </p>
-    <p class="w3-center">Version 0.4.2 - Footage of phases 5/6 wanted to include wave breakdown.</p>
-    <p class="w3-center">Team recommendations still being optimised and updated as more reliable compositions are found.</p>
+    <p class="w3-center">Version 0.5.0 - Footage of phases 5/6 wanted to include wave breakdown.</p>
+    <p class="w3-center">Team recommendations are updated as more reliable compositions are found.</p>
 
     
     <!-- Guild Advert. Will add/remove when appropriate -->
-    <p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 33 Stars ROTE - 1 Permanent Space Available!</a></p>
+	<!--<p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 33 Stars ROTE - 1 Permanent Space Available!</a></p>-->
 
 
 </div>
