--- a/html/authors.html
+++ b/html/authors.html
@@ -45,7 +45,7 @@ p {margin-top: 0.5em ; margin-bottom: 0.5em ; line-height: 1em;}
 </form></li>
       <li>Original design of geo tb by Jetkokos </li>
 	  <li>Have something to add? Consider contributing to the <a href=https://github.com/genskaar/tb_empire> github repo.</a></li>
-      <li> Special thanks to a number of people for contributing to this site including - SonOfABlaster, TheAnimist, SigSig, The folks on the ROTE discord server and everyone in BSE</li>
+      <li> Special thanks to a number of people for contributing to this site including - BitDynasty, SonOfABlaster, TheAnimist, SigSig, The folks on the ROTE discord server and everyone in BSE</li>
 	  </ul>
     </p>
     
