--- a/html/felucia.html
+++ b/html/felucia.html
@@ -51,7 +51,7 @@
 			<div class="mb-2" v-if="selectedMission.preferredSquads">
 				<p  class="h4">Preferred teams</p>
 				<div v-for="item in selectedMission.preferredSquads">
-                    <p><img v-bind:src="'../media/'+squads[item].videosource+'.png'" onerror="this.src='../media/none.png'; this.style='width:1px;height:1px';" alt="vid" style="width:30px;height:30px;"><a :href="squads[item].video">{{squads[item].name}}</a></p>
+                    <p><img v-bind:src="'../media/'+squads[item].videosource+'.png'" onerror="this.src='../media/none.png';" alt="vid" ><a :href="squads[item].video"> {{squads[item].name}}</a></p>
 					<div class="img_block">
 						<img 
 						v-for="pic in squads[item].toons"
