--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ body, html {height: 100%}
 
     
     <!-- Guild Advert. Will add/remove when appropriate -->
-	<p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 35 Stars ROTE / 40 Reva Shards - 1 Space Available!</a></p>
+	<p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 36 Stars ROTE / 40 Reva Shards</a></p>
+	<!--<p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 36 Stars ROTE / 40 Reva Shards - 1 Space Available!</a></p>-->
 
 
 </div>
