--- a/html/corellia.html
+++ b/html/corellia.html
@@ -83,18 +83,9 @@
 					  <ul>
 					<li class="text-justify" v-for="item in selectedMission.platzones">{{platims[item]}}</li>
 				     </ul>
-					  <!-- <div class="img_block">
-				       <img 
-						v-for="pic in platims[item]"
-						v-bind:src="'../media/platoons/' + pic + '.png'"
-						style="width:120px;height:120px;"
-						>
-				       </div> 
-				       <div v-for= "pic in platims[item]">
-					    <img src="../media/platoons/z1t.png" style="width:200px;height:150px;"> 
-					    
-				       </div>
-				       <img src="../media/mission_KAM.svg" alt="KAM" style="width:42px;height:42px;"> -->
+					  <div>
+				      <img src="../media/platoons/corellia.png" style="width:512px;height:256px;">
+				      </div>
 				   
 			</div>
 			
