--- a/html/tatooine.html
+++ b/html/tatooine.html
@@ -83,6 +83,9 @@
 					  <ul>
 					<li class="text-justify" v-for="item in selectedMission.platzones">{{platims[item]}}</li>
 				     </ul>
+				     					  <div>
+				      <img src="../media/platoons/tatooine.png" style="width:512px;height:256px;">
+				      </div>
 					  <!-- <div class="img_block">
 				       <img 
 						v-for="pic in platims[item]"
