--- a/html/felucia.html
+++ b/html/felucia.html
@@ -82,6 +82,9 @@
 					  <ul>
 					<li class="text-justify" v-for="item in selectedMission.platzones">{{platims[item]}}</li>
 				     </ul>
+				     					  <div>
+				      <img src="../media/platoons/felucia.png" style="width:512px;height:256px;">
+				      </div>
 					  <!-- <div class="img_block">
 				       <img 
 						v-for="pic in platims[item]"
