--- a/html/lothal.html
+++ b/html/lothal.html
@@ -84,6 +84,9 @@
 					  <ul>
 					<li class="text-justify" v-for="item in selectedMission.platzones">{{platims[item]}}</li>
 				     </ul>
+				     					  <div>
+				      <img src="../media/platoons/lothal.png" style="width:512px;height:256px;">
+				      </div>
 					  <!-- <div class="img_block">
 				       <img 
 						v-for="pic in platims[item]"
