--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ body, html {height: 100%}
     </p>
     <p class="w3-xlarge w3-center"> 
     </p>
-    <p class="w3-center">Version 0.6.0 - Footage of phases 5/6 wanted to include wave breakdown.</p>
+    <p class="w3-center">Version 0.6.1 - Footage of phases 5/6 wanted to include wave breakdown.</p>
     <p class="w3-center">Team recommendations are updated as more reliable compositions are found.</p>
 
     
     <!-- Guild Advert. Will add/remove when appropriate -->
-	<p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 37 Stars ROTE / 43 Reva Shards - 1 Space Available</a></p>
-	<!--<p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 36 Stars ROTE / 40 Reva Shards - 1 Space Available!</a></p>-->
+<!--	<p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 37 Stars ROTE / 43 Reva Shards - 1 Space Available</a></p>
+	<p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 36 Stars ROTE / 40 Reva Shards - 1 Space Available!</a></p>-->
 
 
 </div>
