New data for hoth and kafrene

--- a/html/felucia.html
+++ b/html/felucia.html
@@ -37,7 +37,7 @@
 		<div v-if="seen" class="description" v-bind:class="'desc_' + selectedMission.position">
             
             <div class="mb-2">
-            <p><i class="fa fa-window-close fa-fw topcorner" @click="hide"></i></p>
+            <h3><i class="fa fa-window-close fa-fw topcorner" @click="hide"></i></h3>
             </div>
 			
             <div class="mb-2" v-if="selectedMission.reqs">
