--- a/html/mustafar.html
+++ b/html/mustafar.html
@@ -38,7 +38,7 @@
 		<div v-if="seen" class="description" v-bind:class="'desc_' + selectedMission.position">
 			
             <div class="mb-3">
-            <p><i class="fa fa-window-close fa-fw topcorner" @click="hide"></i></p>
+            <h3><i class="fa fa-window-close fa-fw topcorner" @click="hide"></i></h3>
             </div>
             
             <div class="mb-3" v-if="selectedMission.reqs">
