Finished Mandalore for now.

--- a/html/mandalore.html
+++ b/html/mandalore.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ROTE - Kessel</title>
+	<title>ROTE - Mandalore</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Interactive Rise of the Empire Territory Battle Map SWGoH">
 	<meta name="keywords" content="swgoh, star wars, rote, territory, battle, map, tactics, interactive, tb_geo, genskaar">
@@ -84,7 +84,7 @@
 					<li class="text-justify" v-for="item in selectedMission.platzones">{{platims[item]}}</li>
 				     </ul>
 				     					  <div>
-				      <img src="../media/platoons/kessel.png" style="width:512px;height:256px;">
+				      <img src="../media/platoons/mandalore.png" style="width:512px;height:256px;">
 				      </div>
 					  <!-- <div class="img_block">
 				       <img 
@@ -120,7 +120,7 @@
 				<span v-for="item in selectedMission.rewards">&nbsp;&nbsp;{{item}}&nbsp;&nbsp;&nbsp;</span>
 			</div>
             <div class="rewards mb-3" v-if="selectedMission.stars">
-                                <h2>Kessel</h2>
+                                <h2>Mandalore</h2>
 				<p class="h4">Star Requirements</p>
                 <ul>
 				    <li class="text-justify" v-for="item in selectedMission.stars">{{item}}</li>
