Green path for mandalore

--- a/html/main.html
+++ b/html/main.html
@@ -154,7 +154,7 @@
 							<tspan x="340" dy="15">3*: 500,304,479</tspan>	
 					</text>
                     <path  class="part" d="M 196 206 L 209 197 L 212 202 C 229 192 246 185 263 178 L 261 170 L 287 161 L 290 168 L 305 164 L 291 117 C 272 122 257 126 239 133 L 229 115 L 203 126 L 213 145 C 196 152 183 158 168 169 L 196 206 z"					></path>
-                    <path  class="part" d="M 253 240 L 225 195 L 263 178 L 261 171 L 288 162 L 290 168 C 310 163 325 159 345 159 L 345 165 C 355 164 364 164 373 164 L 373 208 C 332 210 292 215 253 240 z"					></path>
+                    <path fill="green" class="part" d="M 253 240 L 225 195 L 263 178 L 261 171 L 288 162 L 290 168 C 310 163 325 159 345 159 L 345 165 C 355 164 364 164 373 164 L 373 208 C 332 210 292 215 253 240 z"					></path>
                     
                     <!-- mixed 5 -->
                     <path fill="green" class="part" d="M 291 117 L 305 165 C 320 160 331 159 345 159 L 345 165 L 400 165 L 401 158 C 416 158 426 159 441 164 L 455 118 C 410 106 351 104 291 117 z"					></path>
